# ppx_deriving_madcast

./: .gitignore  .travis.install.sh  .travis.script.sh  .travis.yml  Makefile  README.md  README.org  dune-project  flake.nix  ppx_deriving_madcast.opam  release.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
.nix/: app-show.nix  app-topiarise.nix  devshell-default.nix  package-default.nix  package-ppx_deriving_madcast.nix  pre-commit-settings-dune-opam-sync.nix  pre-commit-settings-ocp-indent.nix  pre-commit-settings-opam-lint.nix  pre-commit-settings-topiary.nix  pre-commit-settings.nix
src/: dune  extList.ml  jbuild  madcast.ml  madcast.mli  parsetree_utils.cppo.ml  parsetree_utils.ml  ppx.ml  ppx_deriving_madcast.ml  rule.ml  rule.mli  ruleSet.ml  ruleSet.mli  rules.ml
test/: dune  jbuild  show.ml  test.sh  test_ppx_deriving_madcast.ml  testing.ml  testing.mli
test/positive/: curry.ml  group_in_list.ml  identity.ml  list_option_unpacking.ml  poly_id.ml  unpack_and_cast_list.ml
