opam-version: "1.2"

maintainer: "Niols <niols@niols.fr>"
authors: [ "Niols <niols@niols.fr>" "Kerl <kerl@wkerl.me>" ]
license: "LGPL3"

homepage: "https://github.com/Niols/ppx_deriving_madcast"
bug-reports: "https://github.com/Niols/ppx_deriving_madcast/issues"
dev-repo: "git://github.com/Niols/ppx_deriving_madcast.git"

tags: [ "syntax" ]

build: [[ "make" ]]
build-test: [[ "make test" ]]
depends: [
  "ppx_deriving"
  "ppx_tools"
  "ppxfind"
  "jbuilder"
  "opam-installer"
]

version: "0.1"
name: "ppx_deriving_madcast"
