(library
 (name madcast)
 (public_name ppx_deriving_madcast.api)
 (libraries ppx_deriving.api)
 (preprocess (pps ppxlib.metaquot))
 (modules Parsetree_utils ExtList Rule RuleSet Madcast))

(library
 (name ppx_deriving_madcast)
 (public_name ppx_deriving_madcast)
 (libraries ppx_deriving_madcast.api ppx_deriving.api)
 (preprocess (pps ppxlib.metaquot))
 (modules ppx_deriving_madcast)
 (kind ppx_deriver))
